--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(lox_part_2 VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(lox_part_2 main.cpp chunk.cpp memory.cpp debug.cpp value.cpp)
+add_executable(lox_part_2 main.cpp chunk.cpp memory.cpp debug.cpp value.cpp vm.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
