--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,9 @@ project(lox_part_2 VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(lox_part_2 main.cpp chunk.cpp memory.cpp debug.cpp value.cpp vm.cpp)
+add_executable(lox_part_2 main.cpp chunk.cpp memory.cpp debug.cpp value.cpp vm.cpp compiler.cpp scanner.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+set_target_properties(lox_part_2 PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS "test_scripts/scope_test.txt")
 include(CPack)
